--- a/letsshopping/Base.lproj/Main.storyboard
+++ b/letsshopping/Base.lproj/Main.storyboard
@@ -175,7 +175,7 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" red="1" green="0.055564177690000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amount:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QH2-yR-wb7">
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@amount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QH2-yR-wb7">
                                                     <rect key="frame" x="26" y="36" width="100" height="18"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="18" id="Mwl-Rl-B1n"/>
@@ -790,6 +790,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="K3P-7G-M2H"/>
-        <segue reference="jhf-LU-qCT"/>
+        <segue reference="I9c-1M-Cca"/>
     </inferredMetricsTieBreakers>
 </document>
