--- a/letsshopping/Base.lproj/Main.storyboard
+++ b/letsshopping/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="un4-2C-kh4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="un4-2C-kh4">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -229,13 +229,22 @@
                                     <outlet property="delegate" destination="ghQ-ys-kAC" id="1lU-Le-q5H"/>
                                 </connections>
                             </tableView>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zLx-je-fre" userLabel="ivCounter">
+                                <rect key="frame" x="123" y="272" width="128" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="OPk-08-7gQ"/>
+                                    <constraint firstAttribute="width" constant="128" id="tgT-FT-Rsx"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="VjV-bH-REY" firstAttribute="top" secondItem="5gA-cE-Rdv" secondAttribute="top" id="0zm-lm-txM"/>
+                            <constraint firstItem="zLx-je-fre" firstAttribute="centerX" secondItem="2O6-Zo-KDb" secondAttribute="centerX" id="5E6-Ib-6GR"/>
                             <constraint firstItem="5gA-cE-Rdv" firstAttribute="bottom" secondItem="VjV-bH-REY" secondAttribute="bottom" id="9qc-pP-hGF"/>
                             <constraint firstItem="5gA-cE-Rdv" firstAttribute="trailing" secondItem="VjV-bH-REY" secondAttribute="trailing" constant="-4" id="Hf8-pK-Rp0"/>
                             <constraint firstItem="VjV-bH-REY" firstAttribute="leading" secondItem="5gA-cE-Rdv" secondAttribute="leading" constant="-4" id="J2v-Qj-cGM"/>
+                            <constraint firstItem="zLx-je-fre" firstAttribute="centerY" secondItem="2O6-Zo-KDb" secondAttribute="centerY" id="sMr-rm-Z90"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5gA-cE-Rdv"/>
                     </view>
@@ -244,7 +253,7 @@
                         <nil key="title"/>
                         <barButtonItem key="backBarButtonItem" image="back" id="oss-ef-mqE" userLabel="BackButton"/>
                         <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="List" textAlignment="center" minimumFontSize="17" id="P2k-6z-P7c">
-                            <rect key="frame" x="87.666666666666686" y="5" width="200" height="34"/>
+                            <rect key="frame" x="116.33333333333331" y="5" width="200" height="34"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
@@ -260,6 +269,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="ivCounter" destination="zLx-je-fre" id="Lio-dF-hcG"/>
                         <outlet property="tableView" destination="VjV-bH-REY" id="4Bh-tf-VaE"/>
                         <segue destination="rOd-Zk-Kgl" kind="show" identifier="addcommodity" id="EDt-6S-Uyl"/>
                     </connections>
@@ -790,6 +800,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="EDt-6S-Uyl"/>
-        <segue reference="I9c-1M-Cca"/>
+        <segue reference="jhf-LU-qCT"/>
     </inferredMetricsTieBreakers>
 </document>
